# python-joe-quoter-v1

./: pyproject.toml
poetry_demo/: test_requests.py
