[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Darius Foodeei <darius.foodei@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
